--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
   --border-color: hsl(220deg 9% 87%);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 100%; /*16px*/
   padding: 0;
@@ -36,6 +42,12 @@ body {
   width: 100%;
   max-width: 1360px;
   padding: 40px;
+}
+
+@media screen and (max-width: 430px) {
+  .root {
+    padding: 20px;
+  }
 }
 
 .navbar {
